修改ping的方法